[gd_scene load_steps=2 format=3 uid="uid://uwlyki7worjd"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_peo6s"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_peo6s")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 894.0
offset_top = 390.0
offset_right = 976.0
offset_bottom = 561.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Controls" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = " Controls "

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Cretdits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Cretdits" to="." method="_on_cretdits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
